--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-dom": "^0.14.5",
     "react-motion": "^0.3.1",
     "webpack": "^1.12.9"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^1.14.0"
   }
 }
